; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkcasfw.c_csum8_update.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkcasfw.c_csum8_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csum_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @csum8_update(i32* %0, i64 %1, %struct.csum_state* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.csum_state*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.csum_state* %2, %struct.csum_state** %6, align 8
  br label %7

7:                                                ; preds = %18, %3
  %8 = load i64, i64* %5, align 8
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %21

10:                                               ; preds = %7
  %11 = load i32*, i32** %4, align 8
  %12 = getelementptr inbounds i32, i32* %11, i32 1
  store i32* %12, i32** %4, align 8
  %13 = load i32, i32* %11, align 4
  %14 = load %struct.csum_state*, %struct.csum_state** %6, align 8
  %15 = getelementptr inbounds %struct.csum_state, %struct.csum_state* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, %13
  store i32 %17, i32* %15, align 4
  br label %18

18:                                               ; preds = %10
  %19 = load i64, i64* %5, align 8
  %20 = add nsw i64 %19, -1
  store i64 %20, i64* %5, align 8
  br label %7

21:                                               ; preds = %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
